--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-ody {
+body {
     font-family: arial, sans-serif;
   }
   
@@ -53,4 +53,3 @@ ody {
   .search-form {
     margin-bottom: 20px;
   }
-  
