--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,25 @@ body {
     margin: 0 0 10px;
     padding: 0;
   }
+  li {
+    color: #7c7c7c;
+    font-size: 16px;
+    font-weight: 100;
+    height: 19px;
+    line-height: 1;
+    list-style: none;
+  }
+  
+  .weather-app {
+    border: 1px solid #dadde1;
+    padding: 15px;
+    margin: 20px auto;
+    border-radius: 10px;
+    max-width: 600px;
+  }
+  
+  .weather-icon {
+    height: 64px;
+    width: 64px;
+    margin-right: 10px;
+  }
