--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,18 @@ body {
     width: 64px;
     margin-right: 10px;
   }
+  .temperature {
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 1;
+  }
+  
+  .units {
+    position: relative;
+    top: -34px;
+  }
+  
+  .search-form {
+    margin-bottom: 20px;
+  }
